pub/System/JQuerymbMenu/menu_red.css
.mbMenuRoot {
	font-family:"Lucida Sans Unicode","Lucida Grande",Helvetica,Arial,sans-serif;
	font-size:14px;
	color:#f3f3f3;
	height: 20px;
	align:left;
	width:100%
}
.mbmenu{
  display:none;
}
.rootVoices{
	background-color:grey;
	padding:5px 5px 8px;
}
.rootVoices a.rootVoice {
	vertical-align:middle;
	background-color:transparent;
	width:120px;
	font-family:Arial,Helvetica,sans-serif;
	color: #f3f3f3;
	font-size:14px;
	line-height:18px;
	padding:8px;
	cursor: pointer;
	/*-moz-border-radius:8px 8px 0 0;*/
	/*-webkit-border-top-right-radius:8px;*/
	/*-webkit-border-top-left-radius:8px;*/
}

.rootVoices a.rootVoice.selected{
	background: orangered url("../images/bgnd_sel_4.png");
	padding:8px;
	color:#ffffff;
	cursor: pointer;
	font-size:14px;
  text-shadow:#660033 1px 1px 1px;
  -moz-box-shadow:#999 2px 2px 10px;
  -webkit-box-shadow:#999 2px 2px 10px;
}



.rootVoices.vertical {
	width:140px;
}
.rootVoices.vertical a.rootVoice{
	-moz-border-radius:8px 0px 0 8px;
	-webkit-border-top-right-radius:0px;
	-webkit-border-top-left-radius:8px;
	-webkit-border-bottom-right-radius:0px;
	-webkit-border-bottom-left-radius:8px;
}

.menuShadow{
	padding:2px;
	padding-bottom:0px;
	left:-2px;
	top:1px;
}


.menuContainer{
  /*overflow:hidden;*/
  position:absolute;
  background-color:#f3f3f3;
  padding:0;
  -moz-box-shadow:#999 2px 2px 10px;
  -webkit-box-shadow:#999 2px 2px 10px;
  -moz-border-radius:8px;
  -webkit-border-radius:8px;
}
.menuContainer td{
	vertical-align: top;
	text-align: left;
}
.menuContainer .line{
	background-color:transparent;
	width:100%;
}
.menuContainer .line.title {
	background-color:#B23305;
	font-family:Arial,Helvetica,sans-serif;
	font-size:14px;
	border-bottom:1px solid darkred;
}
.menuContainer .line.title a{
	font-size:14px;
}
.menuContainer td a{
	text-decoration:none;
	color: grey;
}
.menuContainer td.voice{
	font-family:Arial,Helvetica,sans-serif;
	font-size:12px;
	padding:7px;
}
.menuContainer .separator{
	background-color:#999;
	height:1px;
}
.menuContainer td.img{
	font-family:Arial,Helvetica,sans-serif;
	text-align:center;
	font-size:12px;
	color: #c3c3c3;
	background-color:transparent;
	width:24px;
	padding:5px;
}
.menuContainer td.img img{
	width:20px;
}
.menuContainer .textBox{
	padding: 10px;
	font-family:Arial,Helvetica,sans-serif;
	font-size:12px;
	color: #c3c3c3;
}
.menuContainer .selected td{
	background-color:lavender;
	background-image:url("../images/bgnd_sel_2.jpg")
}
.menuContainer .literalMenu td{
	background-color:#f3f3f3;
}
.menuContainer .selected td a{
  color:#000;
  text-shadow:#fff 2px 2px 1px;
  /* display:block; I'm not sure this is a good idea. */
}
.menuContainer .NNliteralMenu td a{
  color:#fff;
  text-shadow:none;
  /* display:block; I'm not sure this is a good idea. */
}
.menuContainer .disabled td, .menuContainer .disabled td a {
	color: #cccccc;
}
.menuContainer .subMenuOpener{
	background-image:url("../images/menuArrow_w.gif");
	background-repeat:no-repeat;
	background-position:right;
}
.menuContainer .selected .subMenuOpener{
	background-image:url("../images/menuArrow.gif");
	background-repeat:no-repeat;
	background-position:right;
}
.menuContainer td.voice {
	text-align: left;
}

